--- a/client/css/main.css
+++ b/client/css/main.css
@@ -15,7 +15,7 @@ p {
 }
 
 .container {
-    background: #1e0041;
+    background: #fffebe;
     color: #FFF;
     border-radius: 10px;
     width: 400px;
@@ -47,14 +47,14 @@ header a ~ p {
     vertical-align: middle;
     margin-top: 5px;
     height: 40px;
-    width: 40px;
+    width: 80px;
 }
 
 header {
     position: fixed;
     width: 100%;
     text-align: right;
-    background-color: #1e0041;
+    background-color: #fffebe;
     color: #FFF;
     height: 40px;
     top: 0;
@@ -119,7 +119,7 @@ nav {
 .container-home {
     width: 100%;
     height: 100%;
-    background: #1e0041;
+    background: #fffebe;
     padding: 20px 10px;
     text-align: center;
     color: #fff;
@@ -165,7 +165,7 @@ nav {
 
 /*-----Image Style-----*/
 .logo-main {
-    width: 150px;
+    width: 300px;
     height: 150px;
     margin: 15px auto;
     display: block;
@@ -173,7 +173,7 @@ nav {
 
 /*-----Login Page-----*/
 .logo-login {
-    height: 300px;
+    height: 150px;
     width: 300px;
     display: block;
     margin: 0 auto;
@@ -211,7 +211,7 @@ a.btn {
 
 /*-----Search Results Page-----*/
 .container-search {
-    background: #1e0041;
+    background: #fffebe;
     color: #FFF;
     border-radius: 10px;
     width: 400px;
@@ -221,7 +221,7 @@ a.btn {
 
 .logo-results {
     height: 75px;
-    width: 75px;
+    width: 150px;
     float: left;
 }
 
