--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -1,13 +1,14 @@
 header
     .header-left
-        img.logo-header(src="/client/img/BookswapLogo.png")
+        a.home(href="/")
+            img.logo-header(src="/client/img/BookswapLogo.png")
     .header-right
         .logged-in.hide
             p Welcome, #[span#profile-display]!
             nav
-                a.menu(href="/") HOME
+                a.menu(href="/library") #[span.requests] MY BOOKS
                 p.divider |
-                a.menu(href="/profile") MY PORTFOLIO
+                a.menu(href="/profile") MY PROFILE
                 p.divider |
                 a.menu(href="/logout") LOGOUT
         .not-logged-in
