Search page created

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -11,7 +11,7 @@ html
             | Welcome to Bookswap
             br
             | Login to add/view your books or search for books below.
-            .search
+            .search-widget
                 form(action="/search" method="get")
                     input.search-stock(type="text" name="query")
                     input.submit(type="submit" value="SEARCH")
