Book page created

--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -4,7 +4,7 @@ html
         title Search Results
         link(rel="stylesheet" href="/client/css/main.css" type="text/css")
     include ./includes/header.jade
-    body.search-div
+    body.search-page
         .container.results
             img.logo-results(src="/client/img/BookswapLogo.png")
             .search-widget
