Add Book page created

--- a/app/views/book.jade
+++ b/app/views/book.jade
@@ -13,3 +13,5 @@ html
                 p.location-lbl Available in These Cities
                 each val in cities
                     p.book-city= val
+        script(type="text/javascript" src="/common/ajax-functions.js")
+        script(type="text/javascript" src="/controllers/userController.client.js")
