Library page created

--- a/app/views/search.jade
+++ b/app/views/search.jade
@@ -14,6 +14,6 @@ html
             each val in results
                 .result
                     p.book-title= val.title
-                    p.book-desc= val.desc
+                    p.book-desc= val.description
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
