--- a/app/views/book.jade
+++ b/app/views/book.jade
@@ -1,4 +1,3 @@
--var cities = cities || ["No locations indicated"]
 doctype html
 html
     head
@@ -8,10 +7,9 @@ html
     body.book-page
         .container.book-div
             h1.book-title= book.title
-            p.book-desc= book.desc
-            .book-locations
-                p.location-lbl Available in These Cities
-                each val in cities
-                    p.book-city= val
+            p.book-desc= book.description
+            p.location-lbl Available in
+            p.book-city= location
+            a.request-book(href="/request/"+book.id) REQUEST BOOK
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
