--- a/app/views/library.jade
+++ b/app/views/library.jade
@@ -14,5 +14,8 @@ html
                     a.book-link(href="/book/"+val.id)
                         p.book-title= val.title
                     p.book-desc= val.description
+                    p.delete-book -
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
+        script(type="text/javascript" src="/client/js/jquery.min.js")
+        script(type="text/javascript" src="/client/js/library.js")
