--- a/client/css/main.css
+++ b/client/css/main.css
@@ -16,7 +16,7 @@ p {
 
 .container {
     background: #fffebe;
-    color: #FFF;
+    color: #000;
     border-radius: 10px;
     width: 400px;
     margin: 15px auto;    
