--- a/app/views/book.jade
+++ b/app/views/book.jade
@@ -10,6 +10,9 @@ html
             p.book-desc= book.description
             p.location-lbl Available in
             p.book-city= location
-            a.request-book(href="/request/"+book.id) REQUEST BOOK
+            p.request-book(id=book.id) REQUEST BOOK
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
+        script(type="text/javascript" src="/client/js/jquery.min.js")
+        script(type="text/javascript" src="/socket.io/socket.io.js")
+        script(type="text/javascript" src="/client/js/socketFunctions.js")
