--- a/app/views/book.jade
+++ b/app/views/book.jade
@@ -10,7 +10,11 @@ html
             p.book-desc= book.description
             p.location-lbl Available in
             p.book-city= location
+            p.request-status You must be logged in to request a book.
             p.request-book.hide(id=book.id) REQUEST BOOK
+            p.accept-request.hide ACCEPT
+            p.deny-request.hide DENY
+            p.cancel-request.hide CANCEL
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
         script(type="text/javascript" src="/client/js/jquery.min.js")
