--- a/app/views/library.jade
+++ b/app/views/library.jade
@@ -11,7 +11,7 @@ html
             a.add-book-link(href="/add") ADD BOOK
             each val in books
                 div.book-listing
-                    p.request-flag -
+                    p.request-flag(id=val.id) -
                     a.book-link(href="/book/"+val.id)
                         p.book-title= val.title
                     p.book-desc= val.description
@@ -19,4 +19,5 @@ html
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
         script(type="text/javascript" src="/client/js/jquery.min.js")
+        script(type="text/javascript" src="/socket.io/socket.io.js")
         script(type="text/javascript" src="/client/js/library.js")
