--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -14,3 +14,6 @@ header
         .not-logged-in
             a.login(href="/login")
                 button.login-button LOGIN
+    script(type="text/javascript" src="/client/js/jquery.min.js")
+    script(type="text/javascript" src="/socket.io/socket.io.js")
+    script(type="text/javascript" src="/client/js/header.js")
