--- a/app/views/includes/header.jade
+++ b/app/views/includes/header.jade
@@ -6,7 +6,8 @@ header
         .logged-in.hide
             p Welcome, #[span#profile-display]!
             nav
-                a.menu(href="/library") #[span.requests] MY BOOKS
+                div.requests
+                a.menu(href="/library") MY BOOKS
                 p.divider |
                 a.menu(href="/profile") MY PROFILE
                 p.divider |
