--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -13,7 +13,7 @@ html
             | Login to add/view your books or search for books below.
             .search-widget
                 form(action="/search" method="get")
-                    input.search-stock(type="text" name="query")
+                    input.search-box(type="text" name="query")
                     input.submit(type="submit" value="SEARCH")
     script(type="text/javascript" src="/common/ajax-functions.js")
     script(type="text/javascript" src="/controllers/userController.client.js")
