--- a/client/css/main.css
+++ b/client/css/main.css
@@ -15,7 +15,7 @@ p {
 }
 
 .container {
-    background: #fffebe;
+    background: #fff;
     color: #000;
     border-radius: 10px;
     width: 400px;
@@ -229,6 +229,77 @@ a.btn {
 
 .login-text {
     color: #000;
+}
+
+/*-----Library Page-----*/
+.add-book-link {
+    text-decoration: none;
+}
+
+.add-book {
+    background: #9c6700;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: bold;
+    padding: 5px;
+    margin-bottom: 20px;
+}
+
+.add-book:hover {
+    background: #624000;
+}
+
+.book-listing {
+    border-width: 1px;
+    border-color: #333;
+    border-radius: 5px;
+    border-style: solid;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+.flagged {
+    background: #00a4d8;
+    border-radius: 50%;
+    display: inline-block;
+    color: #fff;
+    width: 15px;
+    height: 15px;
+    font-size: .8em;
+}
+
+.book-link {
+    text-decoration: none;
+    color: #9c6700;
+    font-weight: bold;
+    display: inline;
+    font-size: 1.4em;
+}
+
+.book-link:hover {
+    color: #624000;
+}
+
+.book-title {
+    display: inline;
+}
+
+.book-desc {
+    font-style: italic;
+}
+
+.delete-book {
+    background: #f59670;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 3px;
+    width: 50px;
+    margin: 10px auto 0 auto;
+}
+
+.delete-book:hover {
+    cursor: pointer;
+    color: #f00;
 }
 
 /*-----Search Results Page-----*/
