--- a/client/css/main.css
+++ b/client/css/main.css
@@ -194,6 +194,10 @@ nav p {
 }
 
 /*-----Login Page-----*/
+.login-page {
+    padding-top: 40px;
+}
+
 .logo-login {
     height: 150px;
     width: 300px;
@@ -206,13 +210,20 @@ a.btn {
 }
 
 .btn {
-    color: #009688;
-    background: none;
+    color: #fff;
+    background: #009688;
     display: inline-block;
     border: 0;
+    border-radius: 5px;
     font-weight: 500;
     font-size: 40px;
-    margin: 5px 10px 0px 10px;
+    margin: 15px 10px 0px 10px;
+    padding: 5px;
+}
+
+.login-text {
+    font-size: 24px;
+    color: #fff;
 }
 
 .title-text {
@@ -224,7 +235,7 @@ a.btn {
 }
 
 .btn:hover{
-    color: #F00;
+    background: #F00;
 }
 
 .login-text {
