--- a/app/views/profile.jade
+++ b/app/views/profile.jade
@@ -15,6 +15,6 @@ html
                 input.city-text(type="text" name="city" value=city)
                 label.state-lbl State
                 input.state-text(type="text" name="state" value=state)
-                button.submit(type="submit" value="UPDATE")
+                button.submit(type="submit" value="UPDATE") UPDATE
         script(type="text/javascript" src="/common/ajax-functions.js")
         script(type="text/javascript" src="/controllers/userController.client.js")
