--- a/app/views/error.jade
+++ b/app/views/error.jade
@@ -4,8 +4,8 @@ html
         link(rel="stylesheet" href="/client/css/main.css" type="text/css")
     body
         .container.error-div
-            h1.heading Looking in the wrong places!
+            h1.heading Empty Shelf
             img.logo-main(src="/client/img/BookswapLogo.png")
-            p.error-text Keep your eyes in the right place. Go home.
+            p.error-text Seems you got lost. You should book it home!
             a(href="/")
                 button.home HOME
